--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,24 +3,18 @@ site_description: SRS Deka Box
 
 nav:
   - Home: index.md
-  - Overview:
-      - What's New: overview/whats-new.md
-      - Roadmap: overview/roadmap.md
-      - Architecture: overview/architecture.md
-      - Key Features: overview/key-features.md
-  - Getting Started:
-      - Prerequisites: getting-started/prerequisites.md
-      - Installation: getting-started/installation.md
-      - Deployment: getting-started/deployment.md
-  - User Guide:
-      - Configuration: user-guide/configuration.md
-      - How to Use: user-guide/how-to-use.md
-  - Operations:
-      - Testing: operations/testing.md
-      - Troubleshooting: operations/troubleshooting.md
-      - FAQ: operations/faq.md
-  - Glossary: glossary.md
-  - Reference: reference.md
+  - Introduction: 
+      - Purpose of the Document: introduction/purpose-of-the-document.md
+  - Description:
+      - Product Overview: description/product-overview.md
+      - User Documentation: description/documentation.md
+  - Interface Requirement:
+      - Software Interface: interface-requirement/software-interface.md
+  - Functional Requirement:
+    - Functional Requirement Table: functional-requirement/functional-requirement-table.md
+    - Use Case Diagram: functional-requirement/use-case-diagram.md
+  - Non-Functional Requirements:
+      - Non-Functional Requirements: non-functional-requirements/non-functional-requirements.md
 
 theme:
   name: material
